--- a/zedxone_node/config/zedxone.yaml
+++ b/zedxone_node/config/zedxone.yaml
@@ -10,7 +10,8 @@
             resolution: 'HD1080' # 'SVGA', 'HD1080', 'HD1200', '4K'
             framerate: 30
             swap_rb: false
-            pixel_format: 'COLOR_RGB' # 'COLOR_RGBA', 'COLOR_RGB', 'RAW_BAYER'
+            pixel_format: 'COLOR_RGBA' # 'COLOR_RGBA', 'COLOR_RGB', 'RAW_BAYER'
+            timeout_msec: 2000 # Camera timeout in milliseconds
 
         debug:
             grab_verbose_level: 0
