Fix default params

--- a/zedxone_node/config/zedxone_foxy.yaml
+++ b/zedxone_node/config/zedxone_foxy.yaml
@@ -43,6 +43,6 @@ debug:
     grab_verbose_level: 0 # Set the verbose level of the capture library [0-6]
     general: false # Enable the general debug log of the node
     diagnostic: false # Enable the diagnostic debug log of the node
-    controls: true # Enable the control debug log of the node
+    controls: false # Enable the control debug log of the node
 
 
